<resources>
    <string name="app_name">领航e驾-科二</string>
    <string name="sp_key">k2</string>
    <string name="device_code">设备编号:</string>
    <string name="site_select">考场选择</string>
    <string name="hardware_detection">硬件检测</string>
    <string name="coach_login">教练登陆</string>
    <string name="student_login">学员登陆</string>
    <string name="test_system">考试系统</string>
    <string name="map_management">地图管理</string>
    <string name="setting">设置</string>
    <string name="software_version">软件版本:</string>
    <string name="data_acquisition_terminal">数据采集终端:</string>
    <string name="default_data_acquisition_terminal">V1.0MM</string>
    <string name="synchronous">同步</string>
    <string name="sign_out">退出登陆</string>
    <string name="already_login">已登陆</string>
    <string name="device_register">设备注册</string>
    <string name="device_activation">设备激活</string>
    <string name="device_login">设备登陆</string>
    <string name="server">服务器:</string>
    <string name="not_connected">未连接</string>
    <string name="contact_us">联系我们</string>
</resources>
