<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_heightPercent="7%">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center"
            android:padding="0dp"
            android:text="@string/server" />

        <TextView
            android:id="@+id/server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start|center"
            android:padding="0dp"
            android:text="@string/not_connected"
            android:textColor="@color/red" />

        <ImageView
            android:id="@+id/signalMaterial"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/data_acquisition_terminal"
            android:textDirection="inherit" />

    </LinearLayout>

    <!--========================================-->

    <TextView
        android:id="@+id/examSystem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/topLayout"
        android:layout_margin="0.5dp"
        android:text="@string/test_system"
        app:layout_heightPercent="54%"
        app:layout_widthPercent="34%" />

    <TextView
        android:id="@+id/hardwareDetection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/examSystem"
        android:layout_above="@+id/linBottom"
        android:layout_margin="0.5dp"
        android:text="@string/hardware_detection"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />

    <TextView
        android:id="@+id/siteSelection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0.5dp"
        android:layout_below="@id/topLayout"
        android:layout_toEndOf="@+id/examSystem"
        android:text="@string/site_select"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />


    <TextView
        android:id="@+id/coachLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/topLayout"
        android:layout_margin="0.5dp"
        android:layout_toEndOf="@id/siteSelection"
        android:text="@string/coach_login"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />

    <TextView
        android:id="@+id/studentLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/coachLogin"
        android:layout_margin="0.5dp"
        android:layout_toEndOf="@id/sysSetting"
        android:text="@string/student_login"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />


    <TextView
        android:id="@+id/contactUs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/linBottom"
        android:layout_below="@id/studentLogin"
        android:layout_margin="0.5dp"
        android:layout_toEndOf="@+id/mapManagement"
        android:text="@string/contact_us"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />


    <TextView
        android:id="@+id/sysSetting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/siteSelection"
        android:layout_margin="0.5dp"
        android:layout_toEndOf="@+id/hardwareDetection"
        android:text="@string/setting"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />


    <TextView
        android:id="@+id/mapManagement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/linBottom"
        android:layout_below="@id/sysSetting"
        android:layout_margin="0.5dp"
        android:layout_toEndOf="@+id/hardwareDetection"
        android:text="@string/map_management"
        app:layout_heightPercent="27%"
        app:layout_widthPercent="34%" />


    <!--==========================================-->

    <LinearLayout
        android:id="@+id/linBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/SysSetting"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="100%">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center_vertical"
            android:padding="0dp"
            android:text="@string/device_code" />

        <TextView
            android:id="@+id/deviceCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:padding="0dp"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center_vertical"
            android:padding="0dp"
            android:text="@string/software_version" />

        <TextView
            android:id="@+id/softwareVersion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:padding="0dp"
            android:textColor="@color/blue" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end|center_vertical"
            android:padding="0dp"
            android:text="@string/data_acquisition_terminal" />

        <TextView
            android:id="@+id/dataAcquisitionTerminal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:padding="0dp"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/dataSynchronous"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/synchronous" />

    </LinearLayout>

</androidx.percentlayout.widget.PercentRelativeLayout>