<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLayout"
        android:background="@color/black"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="9.5%"
        app:layout_widthPercent="100%">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end|center"
                android:padding="0dp"
                android:text="传感器:" />

            <TextView
                android:id="@+id/mSensor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center"
                android:padding="0dp"
                android:text="@string/not_connected"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end|center"
                android:padding="0dp"
                android:text="@string/server" />

            <TextView
                android:id="@+id/server"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center"
                android:padding="0dp"
                android:text="@string/not_connected"
                android:textColor="@color/red" />

            <ImageView
                android:id="@+id/signalMaterial"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/data_acquisition_terminal"
                android:textDirection="inherit" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#c0c0c0" />

    </LinearLayout>

    <!--========================================-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linBottom"
        android:layout_below="@id/topLayout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/examSystem"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:background="#E88C3F"
                android:text="@string/test_system" />


            <TextView
                android:id="@+id/hardwareDetection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#1BD61D"
                android:text="@string/hardware_detection" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/siteSelection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#C0C7DD"
                android:text="@string/site_select" />

            <TextView
                android:id="@+id/sysSetting"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#06DBF9"
                android:text="@string/setting" />

            <TextView
                android:id="@+id/mapManagement"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF4135"
                android:text="@string/map_management" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">


            <TextView
                android:id="@+id/coachLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#AB5BFC"
                android:text="@string/coach_login" />

            <TextView
                android:id="@+id/studentLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#02CFFC"
                android:text="@string/student_login" />

            <TextView
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#E6E33F"
                android:text="@string/contact_us" />

        </LinearLayout>


    </LinearLayout>


    <!--==========================================-->


    <LinearLayout
        android:id="@+id/linBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_heightPercent="9.5%"
        app:layout_widthPercent="100%">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#c0c0c0" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:padding="0dp"
                android:text="@string/device_code" />

            <TextView
                android:id="@+id/deviceCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center_vertical"
                android:padding="0dp"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:padding="0dp"
                android:text="@string/software_version" />

            <TextView
                android:id="@+id/softwareVersion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center_vertical"
                android:padding="0dp"
                android:textColor="@color/blue" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:padding="0dp"
                android:text="@string/data_acquisition_terminal" />

            <TextView
                android:id="@+id/dataAcquisitionTerminal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center_vertical"
                android:padding="0dp"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/dataSynchronous"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/synchronous" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0" />
    </LinearLayout>

</androidx.percentlayout.widget.PercentRelativeLayout>